AS7 support for template
git-svn-id: https://alcina.googlecode.com/svn/trunk@492 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/tools/appcreator/build.properties
+++ b/tools/appcreator/build.properties
@@ -10,8 +10,8 @@ project.src.dir=src
 framework.download.dir=${project.work.dir}/download/framework
 container.download.dir=${project.work.dir}/download/container
 
-deploy.jboss.dir=${project.work.dir}/deploy/jboss/jboss-5.1.0.GA
-deploy.jboss.dir.server=${deploy.jboss.dir}/server/all
+deploy.jboss.dir=${project.work.dir}/deploy/jboss/jboss-as-7.0.0.Final
+deploy.jboss.dir.server=${deploy.jboss.dir}/standalone
 tmp.dir=${project.work.dir}/tmp
 
 template.package=cc.alcina.template
