--- a/tools/appcreator/local.ant.properties
+++ b/tools/appcreator/local.ant.properties
@@ -12,6 +12,6 @@ app.human.name=My App
 #db.password=myapppassword
 #db.connection.url=jdbc:postgresql://localhost:5432
 
-jboss.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+jboss.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 
