fix a build leakage of gwittir
git-svn-id: https://alcina.googlecode.com/svn/trunk@520 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/template/entity/build.xml
+++ b/template/entity/build.xml
@@ -21,11 +21,13 @@
 	</path>
 	<patternset id="project.compile.filter.sources">
 		<include name="**/*.java" />
-	</patternset> 
-		<patternset id="project.jar.filter.exclude">
+	</patternset>
+	<patternset id="project.jar.filter.exclude">
+		<!--ant weirdness - why is this compiled??-->
+		<exclude name="com/totsp/gwittir/**" />
 		<exclude name="cc/alcina/template/cs/remote/**" />
 	</patternset>
-	
+
 	<import file="${alcina.home}/project-build.xml" />
 
 </project>
