more hibernate build
git-svn-id: https://alcina.googlecode.com/svn/trunk@587 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/template/servlet/build.properties
+++ b/template/servlet/build.properties
@@ -36,7 +36,7 @@ project.gwt.client.imgs.2.tgt=${project.gwt.build.dir}/img
 project.gwt.module.file=${project.gwt.client.root}/AlcinaTemplateClient.gwt.xml
 project.gwt.classpath.src=${project.home}/entity/src:${project.home}/client/src
 project.gwt.classpath.bin=${project.home}/entity/build:${project.home}/client/bin
-project.gwt.classpath.lib=${alcina.home}/lib/framework/impl/jboss-hibernate/hibernate-annotations.jar
+project.gwt.classpath.lib=${alcina.home}/lib/framework/impl/jboss-hibernate/hibernate-core-4.0.0.Beta1.jarl.jar
 project.gwt.module.name=cc.alcina.template.AlcinaTemplateClient
 
 project.gwt.dev.startup.url=http://localhost:8080/AlcinaTemplateClient.html
