Async client-side rpc deserialization - alpha
git-svn-id: https://alcina.googlecode.com/svn/trunk@593 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="framework/common/src"/>
+	<classpathentry kind="src" path="extras/rpc/client/src"/>
+	<classpathentry kind="src" path="extras/rpc/servlet/src"/>
 	<classpathentry kind="src" path="framework/jvmclient/src"/>
 	<classpathentry kind="src" path="extras/collections/src"/>
 	<classpathentry kind="src" path="framework/entity/src"/>
