--- a/build.properties
+++ b/build.properties
@@ -25,10 +25,17 @@ framework.servlet.lib.dir=${framework.lib.dir}/servlet
 framework.impl.jboss-hibernate.lib.dir=${framework.lib.dir}/impl/jboss-hibernate
 framework.dist.dir=${alcina.home}/dist
 
+extras.dist.dir=${alcina.home}/dist-extras
 extras.collections.dir=${alcina.home}/extras/collections
 extras.collections.src.dir=${extras.collections.dir}/src
 extras.collections.build.dir=${extras.collections.dir}/build
 
+extras.rpc.servlet.dir=${alcina.home}/extras/rpc/servlet
+extras.rpc.servlet.src.dir=${extras.rpc.servlet.dir}/src
+extras.rpc.servlet.build.dir=${extras.rpc.servlet.dir}/build
+
+extras.rpc.client.dir=${alcina.home}/extras/rpc/client
+extras.rpc.client.src.dir=${extras.rpc.servlet.dir}/src
 
 framework.javadoc.outputpath=${alcina.home}/javadoc/trunk
 
