--- a/template/entity/.classpath
+++ b/template/entity/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry kind="lib" path="/alcina/lib/framework/gwt/gwittir-trunk.jar"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/entity/jsr173_api.jar"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/common/jaxb-api.jar"/>
-	<classpathentry kind="lib" path="/alcina/lib/framework/common/persistence-api-1.0.jar"/>
+	<classpathentry kind="lib" path="/alcina/lib/framework/common/persistence-api.jar"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/impl/jboss-hibernate/jboss-javaee.jar"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/impl/jboss-hibernate/hibernate-commons-annotations-3.2.0.Final.jar"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/impl/jboss-hibernate/hibernate-core-4.0.0.Beta1.jar"/>
