--- a/template/servlet/.classpath
+++ b/template/servlet/.classpath
@@ -9,7 +9,7 @@
 	<classpathentry kind="lib" path="/alcina/lib/framework/common/jaxb-api.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/alcinaTemplate_entity"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/alcina"/>
-	<classpathentry kind="lib" path="/alcina/lib/framework/common/persistence-api-1.0.jar"/>
+	<classpathentry kind="lib" path="/alcina/lib/framework/common/persistence-api.jar"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/servlet/servlet-api-2.3.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
