* Add transform conflict checking, and a simple (logging) conflict event handler * Clean up persistence plugin/customisation a bit
git-svn-id: https://alcina.googlecode.com/svn/trunk@736 812e3da0-21a7-11df-99f8-b513f4f1e6c6

--- a/build.xml
+++ b/build.xml
@@ -83,6 +83,7 @@
 			</fileset>
 			<fileset dir="${framework.entity.base.dir}/src">
 				<include name="**/*.java" />
+				<include name="**/*.properties" />
 			</fileset>
 
 			<!-- give the server handy access to stylesheets for print, static serving etc -->
