--- a/template/client/.classpath
+++ b/template/client/.classpath
@@ -7,6 +7,6 @@
 	<classpathentry kind="lib" path="/alcina/lib/framework/gwt/gwittir-trunk.jar"/>
 	<classpathentry kind="lib" path="/alcina/lib/framework/gwt/gwt-user.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
+	<classpathentry kind="lib" path="/alcina/lib/framework/gwt/gwt-dev.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
