--- a/tools/appcreator/jboss.config.properties
+++ b/tools/appcreator/jboss.config.properties
@@ -1,5 +1,5 @@
 cr.1.1.f=# Sample JPDA settings for remote socket
-cr.1.1.t=JAVA_OPTS=&quot;-Xms256m -Xmx1024m -XX:MaxPermSize=256m -Dorg.jboss.resolver.warning=true -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000  -Xdebug -Xrunjdwp:transport=dt_socket,address=8790,server=y,suspend=n&quot;\n\\0
+cr.1.1.t=JAVA_OPTS="-Xms256m -Xmx1024m -XX:MaxPermSize=256m -Dorg.jboss.resolver.warning=true -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000  -Xdebug -Xrunjdwp:transport=dt_socket,address=8790,server=y,suspend=n"\n\\0
 cr.2.1.f=<management>
 cr.2.1.t=<system-properties>\
         <property name="org.apache.tomcat.util.http.ServerCookie.FWD_SLASH_IS_SEPARATOR" value="false"/>\
