--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/Bundle.properties
@@ -1,2 +1,3 @@
 CommonRemoteServiceServlet.dumpPermitted=false
 CommonRemoteServiceServlet.loadDumpPermitted=false
+CommonRemoteServiceServlet.throwLogClientRecordExceptions=false
