--- a/build.properties
+++ b/build.properties
@@ -37,6 +37,10 @@ extras.rpc.servlet.build.dir=${extras.rpc.servlet.dir}/build
 extras.rpc.client.dir=${alcina.home}/extras/rpc/client
 extras.rpc.client.src.dir=${extras.rpc.servlet.dir}/src
 
+extras.dev.dir=${alcina.home}/extras/dev
+extras.dev.src.dir=${extras.dev.dir}/src
+extras.dev.build.dir=${extras.dev.dir}/build
+
 framework.javadoc.outputpath=${alcina.home}/javadoc/trunk
 
 #for hot-deploy
