--- a/build.xml
+++ b/build.xml
@@ -15,11 +15,12 @@
 		<delete dir="${framework.dist.dir}" />
 		<delete dir="${extras.dist.dir}" />
 		<delete dir="${extras.collections.build.dir}" />
+		<delete dir="${extras.dev.build.dir}" />
 		<delete dir="${framework.jvmclient.build.dir}" />
 	</target>
 	<target name="compile" description="Compiles all J2SE modules">
 		<mkdir dir="${framework.entity.build.dir}" />
-		<javac includeantruntime="false"  debug="on" srcdir="${framework.entity.src.dirs}" destdir="${framework.entity.build.dir}">
+		<javac includeantruntime="false" debug="on" srcdir="${framework.entity.src.dirs}" destdir="${framework.entity.build.dir}">
 			<classpath>
 				<path refid="framework.common.lib.path" />
 			</classpath>
@@ -48,6 +49,16 @@
 			<classpath>
 				<path refid="framework.common.lib.path" />
 				<pathelement path="${framework.entity.build.dir}" />
+			</classpath>
+			<compilerarg value="${alcina.compiler.args}" />
+		</javac>
+		<mkdir dir="${extras.dev.build.dir}" />
+		<javac includeantruntime="false" debug="on" srcdir="${extras.dev.src.dir}" destdir="${extras.dev.build.dir}">
+			<classpath>
+				<path refid="framework.common.lib.path" />
+				<path refid="framework.servlet.lib.path" />
+				<pathelement path="${framework.entity.build.dir}" />
+				<pathelement path="${framework.servlet.build.dir}" />
 			</classpath>
 			<compilerarg value="${alcina.compiler.args}" />
 		</javac>
@@ -101,6 +112,15 @@
 				<exclude name="**/*.class" />
 			</fileset>
 		</jar>
+		<jar destfile="${framework.dist.dir}/${ant.project.name}-extras-dev.jar">
+					<fileset dir="${extras.dev.build.dir}">
+						<include name="**/*.*" />
+					</fileset>
+					<fileset dir="${extras.dev.src.dir}">
+						<include name="**/*.*" />
+						<exclude name="**/*.class" />
+					</fileset>
+				</jar>
 		<jar destfile="${extras.dist.dir}/${ant.project.name}-extras-rpc-client.jar">
 			<fileset dir="${extras.rpc.client.src.dir}">
 				<include name="**/*.*" />
