--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="framework/common/src"/>
+	<classpathentry excluding="cc/alcina/framework/common/translatable/" kind="src" path="framework/common/src"/>
 	<classpathentry excluding="com/google/gwt/user/client/translatable/" kind="src" path="extras/rpc/client/src"/>
 	<classpathentry kind="src" path="extras/rpc/servlet/src"/>
 	<classpathentry kind="src" path="framework/jvmclient/src"/>
@@ -11,6 +11,7 @@
 	<classpathentry kind="src" path="framework/servlet/src"/>
 	<classpathentry kind="src" path="extras/cluster/tasks-src"/>
 	<classpathentry kind="src" path="extras/dev/src"/>
+	<classpathentry excluding="cc/alcina/framework/common/translatable/" kind="src" output="framework/clientreflectorjvm/build" path="framework/clientreflectorjvm/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/framework/common/persistence-api.jar"/>
 	<classpathentry kind="lib" path="lib/framework/common/jaxb-api.jar"/>
