extras/misc build

--- a/build.properties
+++ b/build.properties
@@ -41,6 +41,11 @@ extras.dev.dir=${alcina.home}/extras/dev
 extras.dev.src.dir=${extras.dev.dir}/src
 extras.dev.build.dir=${extras.dev.dir}/build
 
+extras.misc.dir=${alcina.home}/extras/misc
+extras.misc.src.dir=${extras.misc.dir}/src
+extras.misc.build.dir=${extras.misc.dir}/build
+
+
 framework.javadoc.outputpath=${alcina.home}/javadoc/trunk
 
 #for hot-deploy
