build/tasks fixes string dump util

--- a/build.properties
+++ b/build.properties
@@ -27,6 +27,7 @@ framework.dist.dir=${alcina.home}/dist
 
 
 extras.dist.dir=${alcina.home}/dist-extras
+extras.tasks.dist.dir=${alcina.home}/dist-tasks
 extras.lib.dir=${alcina.home}/lib/extras
 extras.collections.dir=${alcina.home}/extras/collections
 extras.collections.src.dir=${extras.collections.dir}/src
