optionally increase gwt jvm heap/permgen

--- a/build.properties
+++ b/build.properties
@@ -68,6 +68,9 @@ framework.gwt.classpath.src=${framework.dir}/common/src:${framework.dir}/gwt/src
 framework.gwt.classpath.bin=${framework.entity.build.dir}
 framework.gwt.classpath.lib=${framework.lib.dir}/common/persistence-api.jar:${framework.lib.dir}/common/jaxb-api.jar:${framework.lib.dir}/gwt/gwtx-1.5.2.jar:${framework.lib.dir}/gwt/gwittir-trunk.jar:${framework.lib.dir}/gwt/gwt-html5-database.jar:${framework.lib.dir}/gwt/gwt-user.jar:${framework.lib.dir}/gwt/validation-api-1.0.0.GA.jar:${framework.lib.dir}/gwt/validation-api-1.0.0.GA-sources.jar
 
+framework.gwt.jvm.maxHeapSizeMb=1200
+framework.gwt.jvm.maxPermSizeMb=256
+
 #Javadoc comp
 framework.gwt.classpath.dev.lib=${framework.lib.dir}/gwt/gwt-dev.jar
 ant.build.javac.target=1.5
