--- a/.classpath
+++ b/.classpath
@@ -13,6 +13,7 @@
 	<classpathentry kind="src" path="extras/dev/src"/>
 	<classpathentry excluding="cc/alcina/framework/common/translatable/" kind="src" output="framework/clientreflectorjvm/build" path="framework/clientreflectorjvm/src"/>
 	<classpathentry excluding="cc/alcina/extras/misc/ie/override/" kind="src" path="extras/misc/src"/>
+	<classpathentry kind="src" path="extras/ios6/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/extras/cluster/ant.jar"/>
 	<classpathentry kind="lib" path="lib/framework/common/persistence-api.jar"/>
