--- a/build.xml
+++ b/build.xml
@@ -8,9 +8,9 @@
 		template is local.ant.properties.template in this directory</fail>
 	<import file="${alcina.home}/framework-paths.xml" />
 	<!-- ensure there's something for ant task refs -->
-	<mkdir dir="${framework.dist.dir}"/>
-	<mkdir dir="${extras.dist.dir}"/>
-	<mkdir dir="${extras.tasks.dist.dir}"/>
+	<mkdir dir="${framework.dist.dir}" />
+	<mkdir dir="${extras.dist.dir}" />
+	<mkdir dir="${extras.tasks.dist.dir}" />
 	<target name="clean" description="Delete all generated files">
 		<delete dir="${framework.entity.build.dir}" />
 		<delete dir="${framework.servlet.build.dir}" />
@@ -23,7 +23,7 @@
 		<delete dir="${extras.dev.build.dir}" />
 		<delete dir="${extras.dev.build.dir}" />
 		<delete dir="${framework.jvmclient.build.dir}" />
-		<mkdir dir="${framework.dist.dir}"/>
+		<mkdir dir="${framework.dist.dir}" />
 	</target>
 	<target name="compile" description="Compiles all J2SE modules">
 		<mkdir dir="${framework.entity.build.dir}" />
@@ -100,8 +100,23 @@
 		</javac>
 
 	</target>
-
-	<target name="make-jars" description="Make entity, entity-impl, servlet and extras jars " depends="compile">
+	<target name="check-cluster-tasks-jar">
+		<available file="${extras.tasks.dist.dir}/${ant.project.name}-cluster-tasks.jar" property="cluster-tasks-jar.present" />
+	</target>
+	<target name="make-ant-jar" description="Make the build support jar" depends="compile,check-cluster-tasks-jar" unless="cluster-tasks-jar.present">
+		<mkdir dir="${extras.dist.dir}" />
+		<mkdir dir="${extras.tasks.dist.dir}" />
+		<jar destfile="${extras.tasks.dist.dir}/${ant.project.name}-cluster-tasks.jar">
+			<fileset dir="${extras.cluster.tasks.build.dir}">
+				<include name="**/*.*" />
+			</fileset>
+			<fileset dir="${extras.cluster.tasks.src.dir}">
+				<include name="**/*.*" />
+				<exclude name="**/*.class" />
+			</fileset>
+		</jar>
+	</target>
+	<target name="make-jars" description="Make entity, entity-impl, servlet and extras jars " depends="compile,make-ant-jar">
 		<mkdir dir="${framework.dist.dir}" />
 		<mkdir dir="${extras.dist.dir}" />
 		<delete file="${framework.dist.dir}/${ant.project.name}-entity.jar" />
@@ -111,7 +126,7 @@
 				<include name="**/*.*" />
 				<!-- put in server (servlet/war) jar due to GWT/RPC classloader issues -->
 				<exclude name="${framework.remote.interface.package}" />
-				
+
 			</fileset>
 
 			<fileset dir="${framework.dir}/common/src">
@@ -164,16 +179,7 @@
 				<exclude name="**/*.class" />
 			</fileset>
 		</jar>
-		<mkdir dir="${extras.tasks.dist.dir}"/>
-		<jar destfile="${extras.tasks.dist.dir}/${ant.project.name}-cluster-tasks.jar">
-			<fileset dir="${extras.cluster.tasks.build.dir}">
-				<include name="**/*.*" />
-			</fileset>
-			<fileset dir="${extras.cluster.tasks.src.dir}">
-				<include name="**/*.*" />
-				<exclude name="**/*.class" />
-			</fileset>
-		</jar>
+
 		<jar destfile="${framework.dist.dir}/${ant.project.name}-jvmclient.jar">
 			<fileset dir="${framework.jvmclient.build.dir}">
 				<include name="**/*.*" />
