--- a/build.properties
+++ b/build.properties
@@ -15,6 +15,7 @@ framework.impl.jboss-hibernate.build.dir=${framework.impl.jboss-hibernate.base.d
 
 framework.jvmclient.dir=${alcina.home}/framework/jvmclient
 framework.jvmclient.src.dir=${framework.jvmclient.dir}/src
+framework.jvmclient.src.dir.2=${alcina.home}/framework/clientreflectorjvm/src
 framework.jvmclient.build.dir=${framework.jvmclient.dir}/build
 
 
