begin memcache/ejb3 query translator

--- a/build.xml
+++ b/build.xml
@@ -213,6 +213,7 @@
 			<fileset dir="${framework.impl.base.dir}/src">
 				<include name="cc/*.*" />
 				<include name="**/*.java" />
+				<include name="**/*.properties" />
 				<exclude name="**/*.class" />
 			</fileset>
 		</jar>
