--- a/.settings/de.loskutov.anyedit.AnyEditTools.prefs
+++ b/.settings/de.loskutov.anyedit.AnyEditTools.prefs
@@ -12,7 +12,7 @@ removeTrailingSpaces=true
 replaceAllSpaces=false
 replaceAllTabs=false
 saveAndAddLine=false
-saveAndConvert=true
+saveAndConvert=false
 saveAndFixLineDelimiters=false
 saveAndTrim=true
 useModulo4Tabs=false
