Change queue handling and commits for large-rq transforms (from offline)

--- a/framework/entity/src/cc/alcina/framework/entity/entityaccess/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/entityaccess/Bundle.properties
@@ -1,2 +1,3 @@
 TransformPersister.persistRequestsBeforeHightestPersisted=false
+TransformPersister.flushWithEveryRequest=false
 CommonPersistenceBase.logTransformReadMetrics=false
