--- a/.classpath
+++ b/.classpath
@@ -24,7 +24,7 @@
 	<classpathentry kind="lib" path="lib/framework/entity/log4j-1.2.6.jar" sourcepath="/Users/ouiji/Documents/programmin/java/jakarta-log4j-1.2.6/src/"/>
 	<classpathentry kind="lib" path="lib/framework/entity/xercesImpl_2.9.jar" sourcepath="/Users/ouiji/Documents/programmin/java/xerces-2_9_1/"/>
 	<classpathentry kind="lib" path="lib/framework/gwt/gwtx-1.5.2.jar"/>
-	<classpathentry kind="lib" path="lib/framework/gwt/gwt-dev.jar"/>
+	<classpathentry kind="lib" path="lib/framework/gwt/gwt-dev.jar" sourcepath="/gwt-trunk"/>
 	<classpathentry kind="lib" path="lib/framework/gwt/gwittir-trunk.jar"/>
 	<classpathentry kind="lib" path="lib/framework/gwt/gwt-html5-database.jar"/>
 	<classpathentry kind="lib" path="lib/framework/gwt/validation-api-1.0.0.GA-sources.jar"/>
