--- a/extras/cluster/tasks-src/alcina-cluster-tasks.properties
+++ b/extras/cluster/tasks-src/alcina-cluster-tasks.properties
@@ -2,3 +2,4 @@ pause-jk-worker=cc.alcina.extras.cluster.PauseJkWorker
 unpause-jk-worker=cc.alcina.extras.cluster.UnpauseJkWorker
 backup-file=cc.alcina.extras.cluster.BackupFile
 backup-files=cc.alcina.extras.cluster.BackupFiles
+javac-ex=cc.alcina.extras.cluster.JavacEx
