bot useragent support

--- a/framework/entity/src/cc/alcina/framework/entity/entityaccess/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/entityaccess/Bundle.properties
@@ -1,3 +1,4 @@
 TransformPersister.persistRequestsBeforeHightestPersisted=false
 TransformPersister.flushWithEveryRequest=false
 CommonPersistenceBase.logTransformReadMetrics=false
+CommonPersistenceBase.botUserAgentExtra=
