--- a/.classpath
+++ b/.classpath
@@ -46,5 +46,8 @@
 	<classpathentry kind="lib" path="lib/framework/entity/kryo/minlog-1.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/framework/entity/kryo/objenesis-2.1.jar"/>
 	<classpathentry kind="lib" path="lib/framework/entity/kryo/reflectasm-1.10.1-shaded.jar"/>
+	<classpathentry kind="lib" path="lib/framework/common/jackson-annotations-2.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/framework/entity/jackson-core-2.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/framework/entity/jackson-databind-2.7.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
